fix 'appetizer' sound urls - increase urls' font size to 2em - center align urls - increase paragraph's font-size to 1.5em (there is no current way to detect ipad mini)

--- a/en/static/en/style.css
+++ b/en/static/en/style.css
@@ -34,4 +34,10 @@ td {
 p {
     text-indent: -20px;
     margin-left: 40px;
+    font-size: 1.5em;
+}
+
+#urls {
+    font-size: 2em;
+    text-align: center;
 }
